@@ -1,4 +1,4 @@
-vg	vd	I_Probe1.i[0, ::]
+vg	vd	I_Probe1.i[0,::]
 -1.00000000000000000E0	0.00000000000000000E0	9.50000000000000000E-9
 -1.00000000000000000E0	5.00000000000000000E-2	7.10000000000000000E-6
 -1.00000000000000000E0	1.00000000000000000E-1	1.40000000000000000E-5
